--- a/_posts/2020-03-01-blog-post-1_0.md
+++ b/_posts/2020-03-01-blog-post-1_0.md
@@ -1,7 +1,7 @@
 ---
 title: 'MRI Notes -- Sequence'
 date: 2020-03-01
-permalink: /posts/2020/03/blog-post-1/
+# permalink: /posts/2020/03/blog-post-1/
 tags:
   - MRI
   - Sequence
