--- a/_posts/2020-03-03-blog-post-3_0.md
+++ b/_posts/2020-03-03-blog-post-3_0.md
@@ -1,8 +1,8 @@
 ---
-title: 'MRI Notes -- Basics'
-date: 2020-03-03
+# title: 'MRI Notes -- Basics'
+# date: 2020-03-03
 # permalink: /posts/2020/03/blog-post-2=3/
-tags:
+# tags:
   - MRI
   - Basics
 ---
