--- a/_posts/2020-03-01-blog-post-1_0.md
+++ b/_posts/2020-03-01-blog-post-1_0.md
@@ -5,6 +5,6 @@ date: 2020-03-01
 tags:
   - MRI
   - Sequence
-link: 'https://drive.google.com/open?id=1vDrnPAdgZvEc9MJOuVZME0jlwwGLzr2mQymHRPtd17Y'
+# link: 'https://drive.google.com/open?id=1vDrnPAdgZvEc9MJOuVZME0jlwwGLzr2mQymHRPtd17Y'
 ---
 
